Add label for _3085

--- a/dos33.html
+++ b/dos33.html
@@ -4570,9 +4570,9 @@ With that "legalese" out of the way ... enjoy the read!
                                                                                     ;            <span class='code'>        DEX              </span>
                                                                                     ;            <span class='code'>        BPL DCB2IOB      </span>
                                                                                     ;
-3085:A9 01          094             LDA #1          ; IOB TYPE                      ;[..  <a class='mem' name='_'>wastes</a> 5 bytes, <a class='magic' name='_'>magic number</a>
+3085:A9 01          094             LDA #1          ; IOB TYPE                      ;[..  <a class='mem' name='_3085'>wastes</a> 5 bytes, <a class='magic' name='_'>magic number</a>
 3087:8D E8 37       <a class='line' name='FLOCNXB.095'>095</a>             STA <a class='v' href='#IBTYPE'>IBTYPE</a>                                      ; ..] never referenced!
-                    096 
+                    096 ;
                     097 
                     098 
                     099 
