Note CSS color names

--- a/dos33.html
+++ b/dos33.html
@@ -278,7 +278,7 @@ a.mem { /* *wastes* X bytes of memory */
     text-decoration: none; /* remove underlink from data link */
 }
 .n { /* Dec, Hex, Number, Memory Address */
-    color: #F80;
+    color: #F80; /* Orange */
     font-weight: bold;
 }
 a.name { /* Link to Macro Label */
@@ -289,7 +289,7 @@ a.name { /* Link to Macro Label */
     background-color:#FF0; /* yellow */
 }
 a.page { /* Page Definition -- link comes here */
-    color: #080;
+    color: #080; /* Green */
     text-decoration: none; /* remove underlink from data link */
 }
 a.section {
