--- a/dos33.html
+++ b/dos33.html
@@ -7,7 +7,9 @@
 <a class="f" name="CORRECTVOL" id="CORRECTVOL" >CORRECTVOL  </a>
 <a class='f' name='_8'       >12_         </a>
                         25          37              53                              85  89  93
+Local Line Number
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
+Global Line Number
 ####:## ## ##       ##### ### LABEL       NMEMONIC        COMMENT                         ; Annotation
 
 Pages left:
